  * Fix an invalid line error while loading cache in PART_MODE (mode 1) from causing an endless loop by advancing to SERVER_ARTICLE_MODE without a valid part. (reported by Pharos)
  * Add -a/-A options to get available group list from servers. (-a/-A followed by -Tr blah to list matching group names.)

2002-07-11 v0.20:
  * Use timegm func in date string parser if available, fixes possibility of some times being parsed an hour off due to daylight savings time.
  * Replace the old kludge that was used when timegm wasn't available with a routine by Yitzchak Scott-Thoennes that should work on all systems, even in daylight savings time.
  * Complete rewrite of expression tree code (what handles the -R and -r args) to make the code more flexible, remove ugly pointer math, and fix gcc 3.1 warnings.  Also make the and/or operators use short circuit evaluation.
  * Update parser to allow extra whitespace in -R expressions.
  * Update -R parser to allow a stack larger than 2 elements. (Now you can do "A B && X Y && &&" or "A B X Y && && &&", previously you would need to do "A B && X && Y &&")
  * Added age keyword to -R expressions. (Ex: -R "age 5days12h <" to choose articles less than 5 and a half days old.)
  * Error on non-option command line args rather than ignoring them.  To place comments in listfiles, use # as the first char on a line, or with preceeding whitespace and not inside quotes.
  * Optimize cache/midinfo parsing a bit.
  * Extend server penalization so that any server that disconnects before successfully executing at least one command will be penalized.  This means that disconnects due to overquota, servers that connect but timeout before saying hello, etc, will also be penalized now.
  * Fix needing to escape quotes inside -r strings.
  * Support for (cross-)compiling with mingw32. (see README.mingw32)
  * Added nget.spec(.in) file for RPM support. (Thomas Kotzian)