@@ -50,7 +50,7 @@ Expression is a
 postfix expression that can contain these keywords:
 .br
 Following -g/-G:
-subject, author, lines, bytes, have, req, date, age, messageid(or mid).  Note that the --limit
+subject, author, lines, bytes, have, req, date, age, messageid(or mid), references.  Note that the --limit
 argument does not affect the option, if you want to limit based on number
 of lines, add it as part of the expression.
 .br
